--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,8 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap"
+  <link
+    href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap"
     rel="stylesheet">
 </head>
 
@@ -17,7 +18,7 @@
     <div class="col-sm-12">
       <ul class="nav nav-underline px-5 py-1">
         <li class="nav-item px-2">
-          <a class="nav-link" href="#">Zahtevi</a>
+          <a class="nav-link active" href="#">Zahtevi</a>
         </li>
         <li class="nav-item px-2">
           <a class="nav-link" href="#">Najave</a>
@@ -39,7 +40,7 @@
   </div>
   <div class="row py-5">
     <div class="col-sm-12">
-      <h1 class="text-center !text-red-500">Elektrotehnički fakultet u blokadi</h1>
+      <h1 class="text-center !text-red-500 !font-bold">Elektrotehnički fakultet u blokadi</h1>
     </div>
   </div>
   <app-root></app-root>
