--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
   <script async src="//www.instagram.com/embed.js"></script>
 </head>
 
-<body class="overflow-x-clip overflow-y-auto">
+<body class="overflow-x-hidden">
 
   <app-root></app-root>
 </body>
